--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,19 +1,17 @@
 [package]
 name = "time-scheduler-server"
 description = "A server for the time-scheduler app"
-version = "0.1.4"
+version = "1.0.0"
 edition = "2021"
 license = "MIT"
 authors = ["Dr-42"]
 repository = "https://github.com/Dr-42/time-scheduler-server"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-axum = {version = "0.6.20", features = ["headers"]}
-serde_json = "1.0.108"
-serde = {version ="1.0.108", features = ["derive"]}
-sha256 = "1.4.0"
+axum = "0.7.9"
+sha256 = "1.5.0"
 rpassword = "7.3.1"
-tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
-axum-macros = "0.3.8"
+tokio = { version = "1.41.1", features = ["full"] }
+chrono = { version = "0.4.38", features = ["serde"] }
+serde = { version = "1.0.215", features = ["derive"] }
+serde_json = "1.0.133"
