--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,4 @@ serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.134"
 rand = "0.8.5"
 jsonwebtoken = "9.3.0"
-
-[profile.dev.package.num-bigint-dig]
-opt-level = 3
+indexmap = "2.7.1"
